# comsys-setup

./: .gitignore  README.md  compet_plot.xlsx
clerk/: Cargo.toml
clerk/src/: lib.rs  main.rs  record.rs
clerk/src/old/: csv_cl.rs  generic_table.rs  lib.rs  table.rs
clerk/src/xslx_conv/: _conv.rs  convs.rs  impls.rs  mod.rs  prelude.rs  traits.rs
comsys-server-rs/: .env  Cargo copy.toml.copy  Cargo.toml  build.rs  diesel.toml  log.2024-04-17  newmodels  rundiesel.bat
comsys-server-rs/migrations/00000000000000_diesel_initial_setup/: up.sql
comsys-server-rs/migrations/2024-04-24-161536_create_users/: up.sql
comsys-server-rs/migrations/2024-04-24-162355_create_organisations/: down.sql  up.sql
comsys-server-rs/migrations/2024-04-24-192433_create_user_orgs/: down.sql  up.sql
comsys-server-rs/migrations/2024-04-25-054842_create_tokens/: up.sql
comsys-server-rs/migrations/2024-05-17-213128_create_competitions/: down.sql  up.sql
comsys-server-rs/migrations/2024-05-18-145127_create_comp_data/: down.sql  up.sql
comsys-server-rs/migrations/2024-05-18-184730_create_comp_staff_link/: down.sql  up.sql
comsys-server-rs/src/: auth_service.rs  comp_decl_service.rs  comp_handler_service.rs  main.rs  models.rs  schema.rs  server.rs  users_service.rs
comsys-server-rs/src/auth_backend/: authch_intercp.rs  mod.rs  perm_checks.rs  tokens.rs
comsys-server-rs/src/competition_backend/: comp_state.rs  mod.rs  msq.rs  msq_broadcast.rs  state_interpreter.rs
comsys-server-rs/src/db_mng/: comp_mng.rs  mod.rs  org_mng.rs  time_convert.rs  token_mng.rs  user_mng.rs
comsys-wasm/: Cargo.toml  README.md  build.rs  index.html  index.scss  toml-backup  trunk.toml
comsys-wasm/proto/: auth.proto  comp.proto  comp_handler.proto  generic.proto  users.proto
comsys-wasm/src/: context.rs  main.rs  reqs.rs  router.rs  utils.rs
comsys-wasm/src/__xslx_conv/: conv.rs  convs.rs  impls.rs  mod.rs
comsys-wasm/src/components/: basic.rs  cabinet.rs  comp_cardview.rs  comp_handler.rs  competitions.rs  comps.rs  context_wraps.rs  header.rs  mod.rs  simple.rs
comsys-wasm/src/fs/: file_reader.rs  mod.rs
comsys-wasm/src/grpc/: auth.rs  auth_client_interceptor.rs  comp.rs  comp_handler.rs  generic.rs  mod.rs  users.rs
comsys-wasm/src/xslx_conv/: conv.rs  impls.rs  mod.rs  prelude.rs
comsys-wasm/static/: стартовыйизмененный+программа_25_05_2024.xlsx
db/: run-docker-tt.bat
nginx/: ngnix.conf  server.key  server.pem
