[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
umya-spreadsheet = { version = "2.1.1", features = ["js"] }
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version="*", features=["macros", "rt"]}