[package]
name = "comsys-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "*"
# anyhow = "*"
tokio={version="*", features=["full"]}

# num-traits = "*"
# async-trait = "*"

chrono = "*"

tower-http = { version = "0.4.4", features = ["cors"] }
tower-cookies = "0.10.0"

tonic-web = { version = "0.11"}
tonic = { version = "0.11" , features = ["tls", "tls-roots-common", "tls-webpki-roots"]} #,"tls-roots","tls-webpki-roots"
prost = "0.12"
# tonic-build = "*"

# zeroize = "*"
# ed25519-dalek={ version="2.0.0", features=["alloc", "std", "rand_core", "batch", "asm", "serde"]}
# x25519-dalek = {version = "2.0.1", features = ["getrandom", "zeroize"]}
# aes = "*"
serde = { version = "*", features = ["derive"] }
serde_json="*"
tonic-build = "0.11.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "*"


diesel = { version = "2.1.1", features = ["postgres"] }
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "*"
