[package]
name = "comsys-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "*"
# anyhow = "*"
tokio={version="*", features=["full"]}
tokio-stream = {version="*", features=["sync"]}
# num-traits = "*"
# async-trait = "*"

chrono = "*"

tower = "0.4.13" # "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
tower-cookies = "0.10.0"

tonic-web = { version = "0.12.1"}
tonic = { version = "0.12.1" , features = ["tls", "tls-webpki-roots"]} #,"tls-roots","tls-webpki-roots" "tls-roots-common",
tonic-async-interceptor = "0.12.0"
prost = { version = "0.13.1", features = ["derive"] }
prost-types = "0.13.1"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
# tonic-build = "*"

# zeroize = "*"
# ed25519-dalek={ version="2.0.0", features=["alloc", "std", "rand_core", "batch", "asm", "serde"]}
# x25519-dalek = {version = "2.0.1", features = ["getrandom", "zeroize"]}
# aes = "*"
serde = { version = "1.0.198", features = ["derive", "alloc", "std", "serde_derive", "rc"] }
serde_json="1.0.116"
serde_with = { version = "3.8.1", features = ["base64"]}

tonic-build = "0.11.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"

# Token and Security
jsonwebtoken = { version = "9.3.0"}
# zeroize = { version = "1.7.0", features = ["zeroize_derive", "derive", "serde"]}
rand = { version = "0.8.5", features = ["default"]}
rand_core = {version = "0.6.4"}
uuid = { version = "1.8.0", features = ["v4", "v8", "serde", "atomic", "fast-rng"] }
argon2 = {version = "0.5.3", features = ["zeroize"]}
fastmurmur3 = "0.2.0"

# BD Working
diesel = { version = "2.1.6", features = ["chrono"]}
diesel-async = { version = "0.5.0", features = ["postgres", "async-connection-wrapper", "deadpool"] }
dotenvy = "0.15.7"
bincode = "1.3.3"

# tarantool-rs = { version = "0.0.10"}
# tarantool = "0.6.6"

[build-dependencies]
tonic-build = { version = "0.12.1"}
