[package]
name = "consys-wasm"
version = "0.1.0"
edition = "2021"

authors = ["Razmyslov Konstantin <yoitz@yandex.ru> <yoitzw@gmail.com>"]
publish = false

[dependencies]

wasm-bindgen-futures = "*"
wasm-bindgen = { version = "0.2",features = ["serde-serialize"] }
wasm-cookies = "*"

yew = { version = "0.21.0", features = ["csr", "default"] } # main
yew-router = "*"
yew-autoprops = "0.4.1"

web-sys = { version = "0.3.69", features = ["Event", "EventTarget", "HtmlFormElement", "Screen"] }
# gloo = "*"

prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.12.3" }

# tonic-web-wasm-client = "0.5"
tonic = { version = "0.11", default-features = false, features = ["codegen", "prost"] }
# grpc-web-client = {git = "https://github.com/titanous/grpc-web-client"}
tonic-web-wasm-client = "0.5.1"


# tonic-build = "0.11.0"

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"]  }
