[package]
name = "comsys-wasm"
version = "0.1.0"
edition = "2021"

authors = ["Razmyslov Konstantin <yoitz@yandex.ru> <yoitzw@gmail.com>, individual developer"]
publish = false

[dependencies]

wasm-bindgen-futures = "0.4.45"
wasm-bindgen = { version = "0.2.95",features = ["serde-serialize"] }
wasm-cookies = "0.2.1"

yew = { version = "0.21.0", features = ["csr", "default"] } # main
yew-router = "0.18.0"
yew-autoprops = "0.4.1"

validator = { version = "0.18.1", features = ["derive"] }


web-sys = { version = "0.3.72", features = ["Event", "EventTarget", "HtmlFormElement", "Screen", "DomTokenList", "AbortController"] }
# gloo = "*"
gloo-file = "0.3.0"

prost = { version = "0.13.3", features = ["derive"] }
prost-types = "0.13.3"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
reqwest = { version = "0.12.8" }

# bytes = "*"

tokio = { version="1.40.0", features=["rt"]}
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost"] }
hyper = "1.5.0"
hyper-util = "0.1.9"
# tonic-web = "*" # ??
tower = "0.5.1"
http-body-util = "0.1.2"
tonic-web-wasm-client = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
# futures-util = "*" # ??

umya-spreadsheet = { version = "2.1.1", features = ["js"] }
clerk = { path = "../clerk" }
chrono = "0.4.38"
# tokio = { version = "1.37.0", features = ["test-util", "macros", "tokio-macros"] }


[build-dependencies]
tonic-build = { version = "0.12.3", default-features = false, features = ["prost"]  }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using whole-program analysis
lto = true